[project]
name = "quill-template-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jpype1>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**"]
sources = ["."]

[project.scripts]
init = "scripts:init"
generate = "scripts:generate"
dev = "scripts:dev"
build = "scripts:build"
